Remove rosdep and copy from dockerfile

--- a/compose.yaml
+++ b/compose.yaml
@@ -25,5 +25,6 @@ services:
       # Allows graphical programs in the container.
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ${XAUTHORITY:-$HOME/.Xauthority}:/root/.Xauthority
+      - ./src/:/ros_templates/src/
     command:
       terminator
